one option where we use groups and their inner containers as bootstrap containers. not fully baked but is one option with gutenberg 6.0 groups/columns.

--- a/src/scss/_blocks.scss
+++ b/src/scss/_blocks.scss
@@ -5,7 +5,7 @@
 @import "blocks/align";
 @import "blocks/kadence";
 @import "blocks/core/button";
-@import "blocks/core/columns";
+@import "blocks/core/columns_groups";
 @import "blocks/core/gallery";
 @import "blocks/core/heading";
 @import "blocks/core/image";
